# Crossformer

./: .gitignore  MANIFEST.in  README.md  cfg.json  cfg_air.json  cfg_air_prune.json  cfg_weather.json  cfg_weather_prune.json  debugging.py  main.py  main_channel_prune.py  main_prune.py  pyproject.toml  run.py  setup.py
.github/workflows/: pypi-publish.yml  test.yml
Docs/: CFG- Manual.md
cfg/: cfg_air.json
crossformer/: main.py
crossformer/data_tools/: data_interface.py
crossformer/model/: crossformer.py
crossformer/model/layers/: attention.py  decoder.py  embedding.py  encoder.py
crossformer/prune/: prune.py  prune_model.py  unstructured_prune.py
crossformer/prune_model/: channel_prune.py  prune_model.py
crossformer/utils/: metrics.py  model_profiling.py  tools.py
data/: all_weather_values.csv
data/air/: Ilmanlaatuindeksit2017.xls  Ilmanlaatuindeksit2018.xlsx  Ilmanlaatuindeksit2019.xlsx  Ilmanlaatuindeksit2020.xlsx  Ilmanlaatuindeksit2021.xlsx  Ilmanlaatuindeksit2022.xlsx  Ilmanlaatuindeksit2023.xlsx  Ilmanlaatuindeksit2024.xlsx  Ilmanlaatuindeksit2025.xlsx  meta-locations.xlsx  sample_values.csv  values.csv
data/weather/: WeatherInforamtion.csv  broker_sample.csv
docs/: CFG- Manual.md
scripts/: demo.json  main.py
scripts_prune/: demo.csv  demo.json  main_prune.py
tests/: test_basic.py
tests_prune/: test_prune_basic.py
